--- a/management-report/markdown/subpage-scotland-temp.Rmd
+++ b/management-report/markdown/subpage-scotland-temp.Rmd
@@ -18,7 +18,10 @@ Sidebar {.sidebar}
 
 ***
 
-<!-- Reword this and try and force to bottom of sidebar -->
+For more information regarding how the LDP Standard is calculated, please see the [methodology](#methodology) page.
+
+***
+
 Please get in touch with any comments, suggestions and feedback: [NSS.ISDDementiaPDS@nhs.net](mailto:NSS.ISDDementiaPDS@nhs.net)
 
 
