Add note for Lanarkshire and reorder methodology page

--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -79,7 +79,7 @@ div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
 
 For more detail on how the above is calculated, please see the [methodology](#methodology) page.
 
-Further information regarding the Dementia PDS dataset and submission process can be found on the [Dementia PDS pages](https://www.isdscotland.org/Health-Topics/Mental-Health/Dementia-Post-diagnostic-Support/_docs/Dementia-PDS-Definitions-and-Recording-Guidance.pdf?) of the [ISD website](https://www.isdscotland.org/).
+Further information regarding the Dementia PDS dataset and submission process can be found on the [Dementia PDS pages](https://www.isdscotland.org/Health-Topics/Mental-Health/Dementia-Post-diagnostic-Support) of the [ISD website](https://www.isdscotland.org/).
 
 
 <!-- Scotland -->
@@ -133,14 +133,6 @@ This page includes more detail regarding the methodology used to arrive at the f
 Row {.tabset data-height=800}
 -------------------------------------------------
 
-### **Number of Expected Diagnoses**
-
-In December 2016, the Scottish Government published a report: [Estimated and Projected Disgnosis Rates for Dementia in Scotland: 2014-2020](https://www.gov.scot/publications/estimated-projected-diagnosis-rates-dementia-scotland-2014-2020/). Estimations in this report are available per calendar year and health board therefore analysis of this part of the LDP standard is unavailable by IJB or any other breakdowns. 
-Infomation on the methodology used to calculate these figures and the limitations of this are available in the report.
-
-Please note that as estimations are available by calendar year and figures in this report are by financial year, the estimation for the calendar year with the majority of months in the selected financial year is used. For example, analysis for financial year 2018/19 uses estimations for the calendar year 2018.
-
-
 ### **Local Delivery Plan (LDP) Standard Classification**
 
 The following steps are taken to ensure the data is of sufficient quality for analysis:
@@ -158,8 +150,8 @@ The following steps are taken to ensure the data is of sufficient quality for an
 
 * PDS started more than 12 months after diagnosis.
 * PDS not started and more than 12 months has passed since diagnosis.
-* PDS terminated less than 11 months after first contact date.
-* PDS terminated before first contact made.
+* PDS terminated (for non-exempt reason) less than 11 months after first contact date.
+* PDS terminated (for non-exempt reason) before first contact made.
 
 #### Exempt from LDP Standard
 
@@ -195,5 +187,13 @@ err %>%
   kable_styling(full_width = FALSE) %>%
   row_spec(15, bold = TRUE)
 ```
+
+### **Number of Expected Diagnoses**
+
+In December 2016, the Scottish Government published a report: [Estimated and Projected Disgnosis Rates for Dementia in Scotland: 2014-2020](https://www.gov.scot/publications/estimated-projected-diagnosis-rates-dementia-scotland-2014-2020/). Estimations in this report are available per calendar year and health board therefore analysis of this part of the LDP standard is unavailable by IJB or any other breakdowns. 
+Infomation on the methodology used to calculate these figures and the limitations of this are available in the report.
+
+Please note that as estimations are available by calendar year and figures in this report are by financial year, the estimation for the calendar year with the majority of months in the selected financial year is used. For example, analysis for financial year 2018/19 uses estimations for the calendar year 2018.
+
 
 <!-- END OF SCRIPT -->
