Recode missing IJB to 'Unknown'

--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -25,7 +25,9 @@ pds <- read_rds(here("data", glue("{fy}-{qt}_final-data.rds"))) %>%
   
   # Remove codes from board and IJB
   mutate(health_board = str_sub(health_board, 3, -1),
-         ijb          = str_sub(ijb, 11, -1))
+         ijb          = if_else(is.na(ijb),
+                                "Unknown",
+                                str_sub(ijb, 11, -1)))
 
 # Load expected diagnoses reference file
 exp <- read_csv(here("reference-files", "expected-diagnoses.csv"))
