--- a/management-report/markdown/subpage-scotland.Rmd
+++ b/management-report/markdown/subpage-scotland.Rmd
@@ -12,9 +12,48 @@ num <- subpage_data %>% filter(ldp %in% c("complete", "exempt")) %>% {sum(.$refe
 den <- subpage_data %>% filter(ldp %in% c("complete", "exempt", "fail")) %>% {sum(.$referrals)}
 pds_rate <- (num / den) * 100
 
+# Format figures with thousands separator
+ref_format <- format(ref, big.mark = ",")
+exp_format <- format(exp, big.mark = ",")
+num_format <- format(num, big.mark = ",")
+den_format <- format(den, big.mark = ",")
+
+# Is there data for all four quarters of the selected year?
 complete_year <- if_else(max_fy == sel_fy & qt != 4, FALSE, TRUE)
 
+# If incomplete year, list quarters included
+qt_text <-
+  if(complete_year){""}else{
+    if(qt == 1){"- Q1"}else{
+      if(qt %in% 2:3){paste0("- Q1-", qt)}
+    }
+  }
+
+# Text to explain incomplete years / referrals still ongoing
+completeness_text <-
+  case_when(
+    complete_year == FALSE ~ 
+      paste0("LDP Standard performance figures are not provided ",
+             "until data is available for the full financial year."),
+    sel_fy == min_fy ~ 
+      paste0("The figures shown are now complete for this financial year and ",
+             "should not change in future versions of these reports. However, ",
+             "slight variations may be seen as data errors are resolved."),
+    TRUE ~ 
+      paste0("As PDS for some referrals in ", sel_fy, " is still ongoing, ",
+             "it is not known yet whether or not they will meet the LDP ",
+             "standard. Therefore, the figures shown are currently provisional",
+             " and subject to change in future versions of this report.")
+  )
+
+# Title for LDP table
+table_title <-
+  ifelse(complete_year == TRUE,
+          "",
+          paste0(" - up to Q", qt))
+
 ```
+
 
 Sidebar {.sidebar}
 -----------------------------------------------------------------------
@@ -22,7 +61,7 @@ Sidebar {.sidebar}
 
 
 ### `r hb`
-#### Financial Year `r sel_fy`
+#### Financial Year `r paste(sel_fy, qt_text)`
 
 ***
 
@@ -44,43 +83,72 @@ Select Financial Year
 
 ***
 
-<!-- Reword this and try and force to bottom of sidebar -->
+For more information regarding how the LDP Standard is calculated, please see the [methodology](#methodology) page.
+
+***
+
 Please get in touch with any comments, suggestions and feedback: [NSS.ISDDementiaPDS@nhs.net](mailto:NSS.ISDDementiaPDS@nhs.net)
 
 
 Row
 ----------------------------------------------------------------------
 
-### Referrals Value Box
-```{r Referrals Value Box}
-valueBox(ref, 
-         icon = "fa-hashtag",
-         caption = glue("referrals were made for post-diagnostic support."))
-```
+### **Note**
+
+These reports are an ongoing development following the implementation of the revised [Dementia PDS dataset](https://www.isdscotland.org/Health-Topics/Mental-Health/Dementia-Post-diagnostic-Support/_docs/Dementia-PDS-Definitions-and-Recording-Guidance.pdf) effective 01 April 2019. As such, they are currently marked as **DRAFT** and may be subject to change in future versions.
+
+`r completeness_text`
+
+
+Row `r if(complete_year == FALSE)"{.hidden}"` 
+----------------------------------------------------------------------
 
 `r ifelse(complete_year == TRUE, "### Expected Value Box", "")`
 ```{r Expected Value Box, include = complete_year}
 valueBox(paste0(round_half_up(exp_rate, 1), "%"), 
-         icon = "fa-percent",
-         caption = glue("of the expected number of diagnoses were ",
-                        "referred for post diagnostic support."))
+         caption = glue("of people estimated to be newly diagnosed with ",
+                        "dementia were referred for post-diagnostic support."))
 ```
 
-### 12 Months Value Box
-```{r 12 Months Value Box}
+`r ifelse(complete_year == TRUE, "### <span style='color:CornflowerBlue'>**How is this figure calculated?**</span>", "")`
+
+`r ifelse(complete_year == TRUE, glue("A total of <span style='color:CornflowerBlue'>**{ref_format}**</span> referrals were made to post-diagnostic support. This is divided by <span style='color:CornflowerBlue'>**{exp_format}**</span>, the estimated number of people newly diagnosed with dementia."), "")`
+
+Row `r if(complete_year == FALSE)"{.hidden}"`
+----------------------------------------------------------------------
+
+`r ifelse(complete_year == TRUE, "### 12 Months Value Box", "")`
+```{r 12 Months Value Box, include = complete_year}
 valueBox(paste0(round_half_up(pds_rate, 1), "%"), 
-         icon = "fa-percent",
-         caption = glue("of those referred for post diagnostic support ",
-                        "received 12 months of support."))
+         caption = glue("of those referred for post-diagnostic support ",
+                        "received a minimum of 12 months of support."))
+```
+
+`r ifelse(complete_year == TRUE, "### <span style='color:CornflowerBlue'>**How is this figure calculated?**</span>", "")`
+
+`r ifelse(complete_year == TRUE, glue("<span style='color:CornflowerBlue'>**{num_format}**</span> of referrals either met or were exempt from the LDP standard. This is divided by <span style='color:CornflowerBlue'>**{den_format}**</span>, the total number of referrals (excluding those whose support is ongoing)."), "")`
+
+
+Row
+----------------------------------------------------------------------
+
+### **Number of Individuals relating to LDP Standard**: Financial Year `r paste0(sel_fy, table_title)`
+
+```{r ldp-table}
+
+ldp_table(subpage_data,
+          scotland = TRUE,
+          include_pc = complete_year)
+
 ```
 
 
-Row {data-height=500}
+Row {.data-height=1000}
 ----------------------------------------------------------------------
 
 ### **Number of Individuals Diagnosed and Referred for PDS** {data-width=800}
 
-```{r Referrals Plot}
+```{r referrals-plot}
 
 plot_referrals(subpage_data, 
                scotland = TRUE,
@@ -88,3 +156,6 @@ plot_referrals(subpage_data,
 
 ```
 
+
+Row
+-----------------------------------------------------------------------
