--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -164,7 +164,18 @@ The following steps are taken to ensure the data is of sufficient quality for an
 * PDS started within 12 months and not yet ended.
 
 
-### **Data Quality**
+### **Number of Expected Diagnoses**
+
+In December 2016, the Scottish Government published a report: [Estimated and Projected Diagnosis Rates for Dementia in Scotland: 2014-2020](https://www.gov.scot/publications/estimated-projected-diagnosis-rates-dementia-scotland-2014-2020/). Estimations in this report are available per calendar year and health board therefore analysis of this part of the LDP standard is unavailable by IJB or any other breakdowns. 
+Information on the methodology used to calculate these figures and the limitations of this are available in the report.
+
+Please note that as estimations are available by calendar year and figures in this report are by financial year, the estimation for the calendar year with the majority of months in the selected financial year is used. For example, analysis for financial year 2018/19 uses estimations for the calendar year 2018.
+
+
+Data Quality
+=================================================
+
+### <!-- No Title -->
 
 Any errors or queries outstanding following the resubmission deadline will be included in analytical outputs such as these management reports and annual publication. Therefore, the better quality of data submitted, the more accurate these figures will be.
 
@@ -185,12 +196,6 @@ err %>%
   row_spec(15, bold = TRUE)
 ```
 
-### **Number of Expected Diagnoses**
-
-In December 2016, the Scottish Government published a report: [Estimated and Projected Diagnosis Rates for Dementia in Scotland: 2014-2020](https://www.gov.scot/publications/estimated-projected-diagnosis-rates-dementia-scotland-2014-2020/). Estimations in this report are available per calendar year and health board therefore analysis of this part of the LDP standard is unavailable by IJB or any other breakdowns. 
-Information on the methodology used to calculate these figures and the limitations of this are available in the report.
-
-Please note that as estimations are available by calendar year and figures in this report are by financial year, the estimation for the calendar year with the majority of months in the selected financial year is used. For example, analysis for financial year 2018/19 uses estimations for the calendar year 2018.
 
 
 <!-- END OF SCRIPT -->
