--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -21,7 +21,9 @@ detach("package:tidylog", unload = TRUE)
 purrr::walk(dir(here::here("functions"), full.names = TRUE), source)
 
 # Load PDS data
-pds <- read_rds(here("data", glue("{fy}-{qt}_final-data.rds"))) %>%
+pds <- read_rds(here("data", 
+                     glue("{fy}-{substr(as.numeric(fy)+1, 3, 4)}/Q{qt}"),
+                     glue("{fy}-{qt}_final-data.rds"))) %>%
   
   # Remove codes from board and IJB
   mutate(health_board = str_sub(health_board, 3, -1),
@@ -33,7 +35,9 @@ pds <- read_rds(here("data", glue("{fy}-{qt}_final-data.rds"))) %>%
 exp <- read_csv(here("reference-files", "expected-diagnoses.csv"))
 
 # Load error summary
-err <- read_rds(here("data", glue("{fy}-{qt}_error-summary.rds"))) %>%
+err <- read_rds(here("data", 
+                     glue("{fy}-{substr(as.numeric(fy)+1, 3, 4)}/Q{qt}"),
+                     glue("{fy}-{qt}_error-summary.rds"))) %>%
   mutate(ijb = if_else(is.na(ijb),
                                 "Unknown",
                                 str_sub(ijb, 11, -1)))
